@@ -1,3 +1,4 @@
+2502 [Update]               fixed freeze when adding new custom update servers. Bug #769
 2501 [Update]               removed update server megui.xvidvideo.ru for the stable branch as it cannot be synced anymore
      [Update]               increased update data refresh interval to 10 days for the stable server
 2500 [x265]                 added custom command line
